sg.tf
resource "aws_security_group" "wordpress-sg" {
  name        = "wordpress-sg"
  description = "HTTP, HTTPS, SSH"
  vpc_id      = aws_vpc.wordpress-vpc.id

  tags = {
    Name = "wordpress-sg"
  }

  ingress {
    from_port   = var.HTTP
    to_port     = var.HTTP
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = var.HTTPS
    to_port     = var.HTTPS
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = var.SSH
    to_port     = var.SSH
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

    egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

}

resource "aws_security_group" "rds-sg" {
  name        = "rds-sg"
  description = "mysql port"
  vpc_id      = aws_vpc.wordpress-vpc.id

  tags = {
    Name = "rds-sg"
  }

  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    security_groups          = [aws_security_group.wordpress-sg.id]
  }
}
